parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> js
Rule 1     js -> element js
Rule 2     js -> <empty>
Rule 3     element -> FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
Rule 4     element -> stmt SEMICOLON
Rule 5     optparams -> params
Rule 6     optparams -> <empty>
Rule 7     params -> IDENTIFIER COMMA params
Rule 8     params -> IDENTIFIER
Rule 9     compoundstmt -> LBRACE statements RBRACE
Rule 10    statements -> stmt SEMICOLON statements
Rule 11    statements -> <empty>
Rule 12    stmt -> IF exp compoundstmt
Rule 13    stmt -> IF exp compoundstmt ELSE compoundstmt
Rule 14    stmt -> IDENTIFIER EQUAL exp
Rule 15    stmt -> RETURN exp
Rule 16    stmt -> VAR IDENTIFIER EQUAL exp
Rule 17    stmt -> exp
Rule 18    exp -> IDENTIFIER
Rule 19    exp -> NUMBER
Rule 20    exp -> STRING
Rule 21    exp -> TRUE
Rule 22    exp -> FALSE
Rule 23    exp -> NOT exp
Rule 24    exp -> LPAREN exp RPAREN
Rule 25    exp -> exp OROR exp
Rule 26    exp -> exp ANDAND exp
Rule 27    exp -> exp EQUALEQUAL exp
Rule 28    exp -> exp LT exp
Rule 29    exp -> exp GT exp
Rule 30    exp -> exp LE exp
Rule 31    exp -> exp GE exp
Rule 32    exp -> exp PLUS exp
Rule 33    exp -> exp MINUS exp
Rule 34    exp -> exp TIMES exp
Rule 35    exp -> exp DIVIDE exp
Rule 36    exp -> IDENTIFIER LPAREN optargs RPAREN
Rule 37    optargs -> <empty>
Rule 38    optargs -> args
Rule 39    args -> exp COMMA args
Rule 40    args -> exp

Terminals, with rules where they appear

ANDAND               : 26
COMMA                : 7 39
DIVIDE               : 35
ELSE                 : 13
EQUAL                : 14 16
EQUALEQUAL           : 27
FALSE                : 22
FUNCTION             : 3
GE                   : 31
GT                   : 29
IDENTIFIER           : 3 7 8 14 16 18 36
IF                   : 12 13
LBRACE               : 9
LE                   : 30
LPAREN               : 3 24 36
LT                   : 28
MINUS                : 33
NOT                  : 23
NUMBER               : 19
OROR                 : 25
PLUS                 : 32
RBRACE               : 9
RETURN               : 15
RPAREN               : 3 24 36
SEMICOLON            : 4 10
STRING               : 20
TIMES                : 34
TRUE                 : 21
VAR                  : 16
error                : 

Nonterminals, with rules where they appear

args                 : 38 39
compoundstmt         : 3 12 13 13
element              : 1
exp                  : 12 13 14 15 16 17 23 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 39 40
js                   : 1 0
optargs              : 36
optparams            : 3
params               : 5 7
statements           : 9 10
stmt                 : 4 10

Parsing method: LALR

state 0

    (0) S' -> . js
    (1) js -> . element js
    (2) js -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . stmt SEMICOLON
    (12) stmt -> . IF exp compoundstmt
    (13) stmt -> . IF exp compoundstmt ELSE compoundstmt
    (14) stmt -> . IDENTIFIER EQUAL exp
    (15) stmt -> . RETURN exp
    (16) stmt -> . VAR IDENTIFIER EQUAL exp
    (17) stmt -> . exp
    (18) exp -> . IDENTIFIER
    (19) exp -> . NUMBER
    (20) exp -> . STRING
    (21) exp -> . TRUE
    (22) exp -> . FALSE
    (23) exp -> . NOT exp
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . exp OROR exp
    (26) exp -> . exp ANDAND exp
    (27) exp -> . exp EQUALEQUAL exp
    (28) exp -> . exp LT exp
    (29) exp -> . exp GT exp
    (30) exp -> . exp LE exp
    (31) exp -> . exp GE exp
    (32) exp -> . exp PLUS exp
    (33) exp -> . exp MINUS exp
    (34) exp -> . exp TIMES exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . IDENTIFIER LPAREN optargs RPAREN

    $end            reduce using rule 2 (js -> .)
    FUNCTION        shift and go to state 4
    IF              shift and go to state 11
    IDENTIFIER      shift and go to state 3
    RETURN          shift and go to state 1
    VAR             shift and go to state 9
    NUMBER          shift and go to state 6
    STRING          shift and go to state 5
    TRUE            shift and go to state 2
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    stmt                           shift and go to state 7
    element                        shift and go to state 13
    exp                            shift and go to state 14
    js                             shift and go to state 10

state 1

    (15) stmt -> RETURN . exp
    (18) exp -> . IDENTIFIER
    (19) exp -> . NUMBER
    (20) exp -> . STRING
    (21) exp -> . TRUE
    (22) exp -> . FALSE
    (23) exp -> . NOT exp
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . exp OROR exp
    (26) exp -> . exp ANDAND exp
    (27) exp -> . exp EQUALEQUAL exp
    (28) exp -> . exp LT exp
    (29) exp -> . exp GT exp
    (30) exp -> . exp LE exp
    (31) exp -> . exp GE exp
    (32) exp -> . exp PLUS exp
    (33) exp -> . exp MINUS exp
    (34) exp -> . exp TIMES exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 6
    STRING          shift and go to state 5
    TRUE            shift and go to state 2
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 17

state 2

    (21) exp -> TRUE .

    OROR            reduce using rule 21 (exp -> TRUE .)
    ANDAND          reduce using rule 21 (exp -> TRUE .)
    EQUALEQUAL      reduce using rule 21 (exp -> TRUE .)
    LT              reduce using rule 21 (exp -> TRUE .)
    GT              reduce using rule 21 (exp -> TRUE .)
    LE              reduce using rule 21 (exp -> TRUE .)
    GE              reduce using rule 21 (exp -> TRUE .)
    PLUS            reduce using rule 21 (exp -> TRUE .)
    MINUS           reduce using rule 21 (exp -> TRUE .)
    TIMES           reduce using rule 21 (exp -> TRUE .)
    DIVIDE          reduce using rule 21 (exp -> TRUE .)
    SEMICOLON       reduce using rule 21 (exp -> TRUE .)
    LBRACE          reduce using rule 21 (exp -> TRUE .)
    RPAREN          reduce using rule 21 (exp -> TRUE .)
    COMMA           reduce using rule 21 (exp -> TRUE .)


state 3

    (14) stmt -> IDENTIFIER . EQUAL exp
    (18) exp -> IDENTIFIER .
    (36) exp -> IDENTIFIER . LPAREN optargs RPAREN

    EQUAL           shift and go to state 18
    OROR            reduce using rule 18 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 18 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 18 (exp -> IDENTIFIER .)
    LT              reduce using rule 18 (exp -> IDENTIFIER .)
    GT              reduce using rule 18 (exp -> IDENTIFIER .)
    LE              reduce using rule 18 (exp -> IDENTIFIER .)
    GE              reduce using rule 18 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 18 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 18 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 18 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 18 (exp -> IDENTIFIER .)
    SEMICOLON       reduce using rule 18 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 19


state 4

    (3) element -> FUNCTION . IDENTIFIER LPAREN optparams RPAREN compoundstmt

    IDENTIFIER      shift and go to state 20


state 5

    (20) exp -> STRING .

    OROR            reduce using rule 20 (exp -> STRING .)
    ANDAND          reduce using rule 20 (exp -> STRING .)
    EQUALEQUAL      reduce using rule 20 (exp -> STRING .)
    LT              reduce using rule 20 (exp -> STRING .)
    GT              reduce using rule 20 (exp -> STRING .)
    LE              reduce using rule 20 (exp -> STRING .)
    GE              reduce using rule 20 (exp -> STRING .)
    PLUS            reduce using rule 20 (exp -> STRING .)
    MINUS           reduce using rule 20 (exp -> STRING .)
    TIMES           reduce using rule 20 (exp -> STRING .)
    DIVIDE          reduce using rule 20 (exp -> STRING .)
    SEMICOLON       reduce using rule 20 (exp -> STRING .)
    LBRACE          reduce using rule 20 (exp -> STRING .)
    RPAREN          reduce using rule 20 (exp -> STRING .)
    COMMA           reduce using rule 20 (exp -> STRING .)


state 6

    (19) exp -> NUMBER .

    OROR            reduce using rule 19 (exp -> NUMBER .)
    ANDAND          reduce using rule 19 (exp -> NUMBER .)
    EQUALEQUAL      reduce using rule 19 (exp -> NUMBER .)
    LT              reduce using rule 19 (exp -> NUMBER .)
    GT              reduce using rule 19 (exp -> NUMBER .)
    LE              reduce using rule 19 (exp -> NUMBER .)
    GE              reduce using rule 19 (exp -> NUMBER .)
    PLUS            reduce using rule 19 (exp -> NUMBER .)
    MINUS           reduce using rule 19 (exp -> NUMBER .)
    TIMES           reduce using rule 19 (exp -> NUMBER .)
    DIVIDE          reduce using rule 19 (exp -> NUMBER .)
    SEMICOLON       reduce using rule 19 (exp -> NUMBER .)
    LBRACE          reduce using rule 19 (exp -> NUMBER .)
    RPAREN          reduce using rule 19 (exp -> NUMBER .)
    COMMA           reduce using rule 19 (exp -> NUMBER .)


state 7

    (4) element -> stmt . SEMICOLON

    SEMICOLON       shift and go to state 21


state 8

    (24) exp -> LPAREN . exp RPAREN
    (18) exp -> . IDENTIFIER
    (19) exp -> . NUMBER
    (20) exp -> . STRING
    (21) exp -> . TRUE
    (22) exp -> . FALSE
    (23) exp -> . NOT exp
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . exp OROR exp
    (26) exp -> . exp ANDAND exp
    (27) exp -> . exp EQUALEQUAL exp
    (28) exp -> . exp LT exp
    (29) exp -> . exp GT exp
    (30) exp -> . exp LE exp
    (31) exp -> . exp GE exp
    (32) exp -> . exp PLUS exp
    (33) exp -> . exp MINUS exp
    (34) exp -> . exp TIMES exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 6
    STRING          shift and go to state 5
    TRUE            shift and go to state 2
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 22

state 9

    (16) stmt -> VAR . IDENTIFIER EQUAL exp

    IDENTIFIER      shift and go to state 23


state 10

    (0) S' -> js .



state 11

    (12) stmt -> IF . exp compoundstmt
    (13) stmt -> IF . exp compoundstmt ELSE compoundstmt
    (18) exp -> . IDENTIFIER
    (19) exp -> . NUMBER
    (20) exp -> . STRING
    (21) exp -> . TRUE
    (22) exp -> . FALSE
    (23) exp -> . NOT exp
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . exp OROR exp
    (26) exp -> . exp ANDAND exp
    (27) exp -> . exp EQUALEQUAL exp
    (28) exp -> . exp LT exp
    (29) exp -> . exp GT exp
    (30) exp -> . exp LE exp
    (31) exp -> . exp GE exp
    (32) exp -> . exp PLUS exp
    (33) exp -> . exp MINUS exp
    (34) exp -> . exp TIMES exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 6
    STRING          shift and go to state 5
    TRUE            shift and go to state 2
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 24

state 12

    (22) exp -> FALSE .

    OROR            reduce using rule 22 (exp -> FALSE .)
    ANDAND          reduce using rule 22 (exp -> FALSE .)
    EQUALEQUAL      reduce using rule 22 (exp -> FALSE .)
    LT              reduce using rule 22 (exp -> FALSE .)
    GT              reduce using rule 22 (exp -> FALSE .)
    LE              reduce using rule 22 (exp -> FALSE .)
    GE              reduce using rule 22 (exp -> FALSE .)
    PLUS            reduce using rule 22 (exp -> FALSE .)
    MINUS           reduce using rule 22 (exp -> FALSE .)
    TIMES           reduce using rule 22 (exp -> FALSE .)
    DIVIDE          reduce using rule 22 (exp -> FALSE .)
    SEMICOLON       reduce using rule 22 (exp -> FALSE .)
    LBRACE          reduce using rule 22 (exp -> FALSE .)
    RPAREN          reduce using rule 22 (exp -> FALSE .)
    COMMA           reduce using rule 22 (exp -> FALSE .)


state 13

    (1) js -> element . js
    (1) js -> . element js
    (2) js -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . stmt SEMICOLON
    (12) stmt -> . IF exp compoundstmt
    (13) stmt -> . IF exp compoundstmt ELSE compoundstmt
    (14) stmt -> . IDENTIFIER EQUAL exp
    (15) stmt -> . RETURN exp
    (16) stmt -> . VAR IDENTIFIER EQUAL exp
    (17) stmt -> . exp
    (18) exp -> . IDENTIFIER
    (19) exp -> . NUMBER
    (20) exp -> . STRING
    (21) exp -> . TRUE
    (22) exp -> . FALSE
    (23) exp -> . NOT exp
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . exp OROR exp
    (26) exp -> . exp ANDAND exp
    (27) exp -> . exp EQUALEQUAL exp
    (28) exp -> . exp LT exp
    (29) exp -> . exp GT exp
    (30) exp -> . exp LE exp
    (31) exp -> . exp GE exp
    (32) exp -> . exp PLUS exp
    (33) exp -> . exp MINUS exp
    (34) exp -> . exp TIMES exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . IDENTIFIER LPAREN optargs RPAREN

    $end            reduce using rule 2 (js -> .)
    FUNCTION        shift and go to state 4
    IF              shift and go to state 11
    IDENTIFIER      shift and go to state 3
    RETURN          shift and go to state 1
    VAR             shift and go to state 9
    NUMBER          shift and go to state 6
    STRING          shift and go to state 5
    TRUE            shift and go to state 2
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    stmt                           shift and go to state 7
    js                             shift and go to state 25
    exp                            shift and go to state 14
    element                        shift and go to state 13

state 14

    (17) stmt -> exp .
    (25) exp -> exp . OROR exp
    (26) exp -> exp . ANDAND exp
    (27) exp -> exp . EQUALEQUAL exp
    (28) exp -> exp . LT exp
    (29) exp -> exp . GT exp
    (30) exp -> exp . LE exp
    (31) exp -> exp . GE exp
    (32) exp -> exp . PLUS exp
    (33) exp -> exp . MINUS exp
    (34) exp -> exp . TIMES exp
    (35) exp -> exp . DIVIDE exp

    SEMICOLON       reduce using rule 17 (stmt -> exp .)
    OROR            shift and go to state 26
    ANDAND          shift and go to state 27
    EQUALEQUAL      shift and go to state 35
    LT              shift and go to state 32
    GT              shift and go to state 28
    LE              shift and go to state 33
    GE              shift and go to state 30
    PLUS            shift and go to state 34
    MINUS           shift and go to state 36
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 29


state 15

    (23) exp -> NOT . exp
    (18) exp -> . IDENTIFIER
    (19) exp -> . NUMBER
    (20) exp -> . STRING
    (21) exp -> . TRUE
    (22) exp -> . FALSE
    (23) exp -> . NOT exp
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . exp OROR exp
    (26) exp -> . exp ANDAND exp
    (27) exp -> . exp EQUALEQUAL exp
    (28) exp -> . exp LT exp
    (29) exp -> . exp GT exp
    (30) exp -> . exp LE exp
    (31) exp -> . exp GE exp
    (32) exp -> . exp PLUS exp
    (33) exp -> . exp MINUS exp
    (34) exp -> . exp TIMES exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 6
    STRING          shift and go to state 5
    TRUE            shift and go to state 2
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 37

state 16

    (18) exp -> IDENTIFIER .
    (36) exp -> IDENTIFIER . LPAREN optargs RPAREN

    OROR            reduce using rule 18 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 18 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 18 (exp -> IDENTIFIER .)
    LT              reduce using rule 18 (exp -> IDENTIFIER .)
    GT              reduce using rule 18 (exp -> IDENTIFIER .)
    LE              reduce using rule 18 (exp -> IDENTIFIER .)
    GE              reduce using rule 18 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 18 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 18 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 18 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 18 (exp -> IDENTIFIER .)
    SEMICOLON       reduce using rule 18 (exp -> IDENTIFIER .)
    LBRACE          reduce using rule 18 (exp -> IDENTIFIER .)
    RPAREN          reduce using rule 18 (exp -> IDENTIFIER .)
    COMMA           reduce using rule 18 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 19


state 17

    (15) stmt -> RETURN exp .
    (25) exp -> exp . OROR exp
    (26) exp -> exp . ANDAND exp
    (27) exp -> exp . EQUALEQUAL exp
    (28) exp -> exp . LT exp
    (29) exp -> exp . GT exp
    (30) exp -> exp . LE exp
    (31) exp -> exp . GE exp
    (32) exp -> exp . PLUS exp
    (33) exp -> exp . MINUS exp
    (34) exp -> exp . TIMES exp
    (35) exp -> exp . DIVIDE exp

    SEMICOLON       reduce using rule 15 (stmt -> RETURN exp .)
    OROR            shift and go to state 26
    ANDAND          shift and go to state 27
    EQUALEQUAL      shift and go to state 35
    LT              shift and go to state 32
    GT              shift and go to state 28
    LE              shift and go to state 33
    GE              shift and go to state 30
    PLUS            shift and go to state 34
    MINUS           shift and go to state 36
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 29


state 18

    (14) stmt -> IDENTIFIER EQUAL . exp
    (18) exp -> . IDENTIFIER
    (19) exp -> . NUMBER
    (20) exp -> . STRING
    (21) exp -> . TRUE
    (22) exp -> . FALSE
    (23) exp -> . NOT exp
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . exp OROR exp
    (26) exp -> . exp ANDAND exp
    (27) exp -> . exp EQUALEQUAL exp
    (28) exp -> . exp LT exp
    (29) exp -> . exp GT exp
    (30) exp -> . exp LE exp
    (31) exp -> . exp GE exp
    (32) exp -> . exp PLUS exp
    (33) exp -> . exp MINUS exp
    (34) exp -> . exp TIMES exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 6
    STRING          shift and go to state 5
    TRUE            shift and go to state 2
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 38

state 19

    (36) exp -> IDENTIFIER LPAREN . optargs RPAREN
    (37) optargs -> .
    (38) optargs -> . args
    (39) args -> . exp COMMA args
    (40) args -> . exp
    (18) exp -> . IDENTIFIER
    (19) exp -> . NUMBER
    (20) exp -> . STRING
    (21) exp -> . TRUE
    (22) exp -> . FALSE
    (23) exp -> . NOT exp
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . exp OROR exp
    (26) exp -> . exp ANDAND exp
    (27) exp -> . exp EQUALEQUAL exp
    (28) exp -> . exp LT exp
    (29) exp -> . exp GT exp
    (30) exp -> . exp LE exp
    (31) exp -> . exp GE exp
    (32) exp -> . exp PLUS exp
    (33) exp -> . exp MINUS exp
    (34) exp -> . exp TIMES exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . IDENTIFIER LPAREN optargs RPAREN

    RPAREN          reduce using rule 37 (optargs -> .)
    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 6
    STRING          shift and go to state 5
    TRUE            shift and go to state 2
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    args                           shift and go to state 40
    exp                            shift and go to state 41
    optargs                        shift and go to state 39

state 20

    (3) element -> FUNCTION IDENTIFIER . LPAREN optparams RPAREN compoundstmt

    LPAREN          shift and go to state 42


state 21

    (4) element -> stmt SEMICOLON .

    FUNCTION        reduce using rule 4 (element -> stmt SEMICOLON .)
    IF              reduce using rule 4 (element -> stmt SEMICOLON .)
    IDENTIFIER      reduce using rule 4 (element -> stmt SEMICOLON .)
    RETURN          reduce using rule 4 (element -> stmt SEMICOLON .)
    VAR             reduce using rule 4 (element -> stmt SEMICOLON .)
    NUMBER          reduce using rule 4 (element -> stmt SEMICOLON .)
    STRING          reduce using rule 4 (element -> stmt SEMICOLON .)
    TRUE            reduce using rule 4 (element -> stmt SEMICOLON .)
    FALSE           reduce using rule 4 (element -> stmt SEMICOLON .)
    NOT             reduce using rule 4 (element -> stmt SEMICOLON .)
    LPAREN          reduce using rule 4 (element -> stmt SEMICOLON .)
    $end            reduce using rule 4 (element -> stmt SEMICOLON .)


state 22

    (24) exp -> LPAREN exp . RPAREN
    (25) exp -> exp . OROR exp
    (26) exp -> exp . ANDAND exp
    (27) exp -> exp . EQUALEQUAL exp
    (28) exp -> exp . LT exp
    (29) exp -> exp . GT exp
    (30) exp -> exp . LE exp
    (31) exp -> exp . GE exp
    (32) exp -> exp . PLUS exp
    (33) exp -> exp . MINUS exp
    (34) exp -> exp . TIMES exp
    (35) exp -> exp . DIVIDE exp

    RPAREN          shift and go to state 43
    OROR            shift and go to state 26
    ANDAND          shift and go to state 27
    EQUALEQUAL      shift and go to state 35
    LT              shift and go to state 32
    GT              shift and go to state 28
    LE              shift and go to state 33
    GE              shift and go to state 30
    PLUS            shift and go to state 34
    MINUS           shift and go to state 36
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 29


state 23

    (16) stmt -> VAR IDENTIFIER . EQUAL exp

    EQUAL           shift and go to state 44


state 24

    (12) stmt -> IF exp . compoundstmt
    (13) stmt -> IF exp . compoundstmt ELSE compoundstmt
    (25) exp -> exp . OROR exp
    (26) exp -> exp . ANDAND exp
    (27) exp -> exp . EQUALEQUAL exp
    (28) exp -> exp . LT exp
    (29) exp -> exp . GT exp
    (30) exp -> exp . LE exp
    (31) exp -> exp . GE exp
    (32) exp -> exp . PLUS exp
    (33) exp -> exp . MINUS exp
    (34) exp -> exp . TIMES exp
    (35) exp -> exp . DIVIDE exp
    (9) compoundstmt -> . LBRACE statements RBRACE
